# os_rust

./: Cargo.toml  MAINTAINERS  README.md
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
